# BaseApplicationServer

./: .gitignore  CMakeLists.txt
data/: VZVZXZZHXZRPTVPVR_20201009104532524.txt
src/: DataHandleCore.cpp  DataHandleCore.h  GetFeature.cpp  GetFeature.h  HttpServer.cpp  HttpServer.h  base.h  face_tool.cpp  face_tool.h  main copy.cpp  main.cpp  protocol.h
